<resources>
    <string name="app_name">Streak</string>
    <string name="broadcast_text">Send File</string>
    <string name="receive_text">Receive File</string>
    <string name="server_status">Current server status</string>
    <string name="create_hotspot">create Hotspot</string>
    <string name="cast_video">Cast File</string>
    <string name="accept_cast_video">Accept File</string>
    <string name="streak_user">Daniel Idere</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="streak_user_email">georgeidere@gmail.com</string>
    <string name="clearSettings">Restore Default</string>
    <string name="empty_password"></string>
    <string name="streak_user_email_holder">Email</string>
    <string name="streak_user_holder">Full Name</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="backup_settings">Backup Settings</string>
    <string name="restore_settings">Restore Backup</string>
    <string name="share_activity_title">Discover Possibilities</string>
    <string name="search_text">Search</string>
    <string name="kilobyte">KB</string>
    <string name="megabyte">MB</string>
    <string name="seconds">SEC</string>


</resources>
